# HaptHexa

./: .gitattributes  .gitignore  LICENSE.md  README.md
Hardware/EAGLE/force_sensor_pcb_v1/: dxfimp.scr  force_sensor_pcb_v1.brd  force_sensor_pcb_v1.sch
Hardware/EAGLE/force_sensor_pcb_v2/: dxfimp.scr  force_sensor_pcb_v2.brd  force_sensor_pcb_v2.sch  force_sensor_pcb_v2_4pcs.brd  partslist
Hardware/EAGLE/main_pcb_v1/: digikey.xlsx  dxfimp.scr  partslist  (+2 more)
Hardware/Inventor/: 00_000_HAPTHEXA_R3.iam  00_002_SINGLE_LEG_R1.iam  00_003_COXA_R1.iam  00_004_FEMUR_R1.iam  00_005_TIBIA_R1.iam  00_015_FORCE_SENSOR_AMP_R1.iam  00_025_SHOE_R1.iam  00_031_THORAX_R1.iam  00_033_BATTERY_LIB_R1.iam  00_044_THORAX_YAW_R1.iam  00_052_LOADCELL_CONTACT_R1.iam  10_028_NYLON_NUT_M2_R1.ipt  10_036_BATTERY_COVER_BASE_R1.ipt  10_047_LOW_HEAD_SCREW_M2X5_R1.ipt  10_048_CAP_SCREW_M2X4_R1.ipt  10_049_FLAT_HEAD_SCREW_M2_5X15_R1.ipt  10_050_CAP_BOLT_M2X6_R1.ipt  10_051_LOW_HEAD_CAP_BOLT_M3X6_R1.ipt  10_053_CAP_BOLT_M2X10_R1.ipt  10_054_CAP_BOLT_M2_5X8_R1.ipt  11_019_TIBIA_CFRP_PIPE_R1.ipt  11_027_SHOE_GRIP_RUBBER_R1.ipt  15_011_FEMUR_BRIDGE_SUPPORT_R1.ipt  15_026_SHOE_GRIP_BASE_R3.ipt  15_026_SHOE_GRIP_BASE_R3.stl  15_034_BODY_FRAME_R2.ipt  15_037_BATTERY_LIB_OUTER_R1.ipt  16_006_COXA_FRAME_1_R1.ipt  16_007_COXA_FRAME_2_R1.ipt  16_008_COXA_FRAME_3_R1.ipt  16_009_COXA_FRAME_4_R1.ipt  16_010_FEMUR_BRIDGE_R1.ipt  16_012_FEMUR_FRAME_DRIVER_R1.ipt  16_013_FEMUR_FRAME_FREE_R1.ipt  16_014_SENSOR_LOD_CON_R1.ipt  16_021_COUPLER_BASE_R1.ipt  16_022_TIBIA_PIPE_CLAMPER_R1.ipt  16_023_LOAD_CELL_CONTACT_PIN_R1.ipt  16_024_LOAD_CELL_MOUNT_BRACKET_R1.ipt  16_029_X430_FREE_HORN_R1.ipt  (+27 more)
Software/mainDirectory/: CMakeLists.txt
Software/mainDirectory/src/: HaptHexa.cpp
mainDirectory/src/: HaptHexa.cpp  attitudeControll.cpp
(+128 files in other folders)
